--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.428",
+  "version": "0.0.430",
   "license": "Unlicense",
   "type": "module",
   "scripts": {
@@ -93,6 +93,7 @@
     "jsonwebtoken": "^9.0.0",
     "kubo-rpc-client": "^3.0.2",
     "libp2p": "^0.46.21",
+    "match-sorter": "^6.3.4",
     "mathjs": "^11.8.0",
     "microtime": "^3.1.1",
     "moesif-nodejs": "^3.3.3",
