--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -9,11 +9,11 @@ defaults:
   run:
     working-directory: ./
 env:
-  DEEPLINKS_PUBLIC_URL: http://localhost:3006
-  NEXT_PUBLIC_DEEPLINKS_URL: http://localhost:3006
-  NEXT_PUBLIC_GQL_PATH: http://localhost:3006/gql
+  DEEPLINKS_PUBLIC_URL: http://host.docker.internal:3006
+  NEXT_PUBLIC_DEEPLINKS_URL: http://host.docker.internal:3006
+  NEXT_PUBLIC_GQL_PATH: http://host.docker.internal:3006/gql
   NEXT_PUBLIC_GQL_SSL: 0
-  NEXT_PUBLIC_DEEPLINKS_SERVER: http://localhost:3007
+  NEXT_PUBLIC_DEEPLINKS_SERVER: http://host.docker.internal:3007
   NEXT_PUBLIC_ENGINES_ROUTE: 0
   NEXT_PUBLIC_DISABLE_CONNECTOR: 1
   JWT_SECRET: '{"type":"HS256","key":"6HZ/FHOibbfr6FsGaArmXVwY1JEO+l2lTVDJeibc2yj2T6OKmx5dIw3UtMFBdUkhd9Q="}'
@@ -22,7 +22,7 @@ env:
   DEEPLINKS_HASURA_STORAGE_URL: http://deep-hasura-storage:8000/
   HASURA_ENDPOINT: http://deep-hasura:8080/v1
   DOCKER_DEEPLINKS_URL: http://deep-links:3006
-  MIGRATIONS_DEEPLINKS_URL: http://localhost:3006
+  MIGRATIONS_DEEPLINKS_URL: http://host.docker.internal:3006
   HASURA_GRAPHQL_ADMIN_SECRET: e9cd987d6c7dd8206a34f7790fed2a29
   MIGRATIONS_HASURA_SECRET: e9cd987d6c7dd8206a34f7790fed2a29
   DEEPLINKS_HASURA_SECRET: e9cd987d6c7dd8206a34f7790fed2a29
